<resources>
    <string name="app_name">Tickets</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_valid_email">Введите верный email</string>
    <string name="enter_valid_password">Пароль должен содержать не менее 8 символов</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="not_valid_credentials">Данные не верны</string>
    <string name="not_valid_data">Не верные данные</string>
    <string name="cinemaName">Название кинотеатра</string>
    <string name="cinemaDescription">Описание кинотеатра</string>
    <string name="tv_cinemaName">Название кинотеатра</string>
    <string name="date">15.01.2023</string>
    <string name="film_name">Название фильма</string>

    <string name="default_movie_name">Аватар: Путь воды</string>
    <string name="default_year">2022</string>
    <string name="default_country">США</string>
...
    <string name="hall">Зал</string>
    <string name="buy">Купить</string>
    <string name="cancel">Отменить</string>
    <string name="smth_went_wrong">Что-то пошло не так...</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="cinemas">Кинотеатры</string>
    <string name="exit">Выйти</string>
</resources>
