...
        android:id="@+id/myTicketsItem"
        android:icon="@drawable/tickets_icon"
        android:title="@string/my_tickets"
        app:showAsAction="always" />

    <item
        android:id="@+id/exitItem"
        android:icon="@drawable/logout_icon"
        android:title="@string/exit"
        app:showAsAction="always" />

</menu>
