...
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/bottomNavigation"
        android:background="#FD8656"
        app:itemIconSize="42dp"
        app:itemIconTint="@color/change_icon_color"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu"/>
</FrameLayout>
